# iwmaeda

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  CLAUDE.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/memory/guidelines/: markdown.md  prompting.md  python.md
.claude/memory/project/: project-structure.md
.github/workflows/: ci.yaml  test.yaml
scripts/: example.py
src/iwmaeda/: __init__.py
tests/: test_functions.py
