[project]
name = "iwmaeda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.sdist]
include = ["src/iwmaeda"]

[tool.hatch.build.targets.wheel]
include = ["src/iwmaeda"]

[tool.hatch.build.targets.wheel.sources]
"src/iwmaeda" = "iwmaeda"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
exclude = [".venv", "**/__pycache__", "playground"]
ignore = []
stubPath = ""
executionEnvironments = []
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# Please turn off rules if they are too strict
reportMissingImports = true
reportMissingTypeStubs = false
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportImportCycles = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportConstantRedefinition = true
reportDeprecated = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportUninitializedInstanceVariable = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportImplicitStringConcatenation = true
reportUnusedCallResult = "warning"
reportUnusedExpression = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# Please turn off rules if they are too strict
select = [
    "FAST003", # FastAPI
    "ASYNC",   # flake8-async
    "S",       # flake8-bandit
    "B",       # flake8-bugbear
    "A",       # flake8-builtins 
    "C4",      # flake8-comprehensions
    "T10",     # flake8-debugger
    "FA",      # flake8-future-annotations
    "INT",     # flake8-gettext
    "ICN",     # flake8-import-conventions
    "LOG",     # flake8-logging
    "PIE",     # flake8-pie
    "PYI",     # flake8-pyi 
    "PT",      # flake8-pytest-style
    "Q",       # flake8-quotes
    "RSE",     # flake8-raise
    "SIM",     # flake8-simplify
    "SLOT",    # flake8-slots
    "TID",     # flake8-tidy-imports
    "ARG",     # flake8-unused-arguments
    "PTH",     # flake8-use-pathlib
    "FLY",     # flynt
    "I",       # isort
    "PERF",    # Perflint
    "E",       # pycodestyle error
    "W",       # pycodestyle warning
    "F",       # Pyflakes
    "PLC",     # Pylint Convention
    "PLE",     # Pylint Error
    "PLW",     # Pylint Warning
    "UP",      # pyupgrade
    "FURB",    # refurb
    "C90",     # McCabe
    "RUF",     # Ruff-specific rules
    "N",       # pep8-naming
    "NPY",     # NumPy-specific rules
    "PD",      # pandas-vet
]
ignore = [
    "E203",   # whitespace-before-punctuation
    "E501",   # line-too-long
    "PT003",  # pytest-extraneous-scope-function
    "UP008",  # super-call-with-parameters
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]
exclude = [".venv/", "node_modules/", "playground/"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["E401", "S101", "S105", "S106", "W291", "PT006"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
